添加配置文件

--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.zzqd</groupId>
-	<artifactId>learning_video</artifactId>
+	<artifactId>elearning</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<!--  	父级依赖 -->
 	<parent>
@@ -27,13 +27,18 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.11</version>
 		</dependency>
-
-
-		<!--   			<dependency> -->
-		<!-- 				<groupId>org.mybatis.spring.boot</groupId> -->
-		<!-- 				<artifactId>mybatis-spring-boot-starter</artifactId> -->
-		<!-- 				<version>1.3.1</version> -->
-		<!-- 			</dependency> -->
+<!--        Mybatis依赖-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+<!--		第三方数据源-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+			<version>1.1.6</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
